--- a/config/database.yml
+++ b/config/database.yml
@@ -30,22 +30,17 @@ development:
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
   #username: back_to_school_drive
-
   # The password associated with the postgres role (username).
   #password:
-
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
   #host: localhost
-
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
   #port: 5432
-
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
-
   # Minimum log levels, in increasing order:
   #   debug5, debug4, debug3, debug2, debug1,
   #   log, notice, warning, error, fatal, and panic
@@ -83,3 +78,7 @@ production:
   database: back_to_school_drive_production
   username: back_to_school_drive
   password: <%= ENV['BACK_TO_SCHOOL_DRIVE_DATABASE_PASSWORD'] %>
+  # development:
+  # adapter: postgresql
+  # database: back-to-school-drive
+  # host: localhost
